# shipflow

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  dist-workspace.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish-crates.yml  release.yml
docs/adr/: 0001-core-architecture.md  README.md
src/: cli.rs  error.rs  git.rs  lib.rs  main.rs  report.rs  storage.rs  task.rs  utils.rs
src/commands/: add.rs  board.rs  completions.rs  done.rs  list.rs  mod.rs  report.rs  status.rs
tests/: cli_add.rs  cli_done.rs  cli_list.rs  cli_report.rs  storage_modes.rs
tests/common/: mod.rs
