[package]
name = "shipflow"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "A minimalist, git-aware CLI for tracking what you ship"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["cli", "productivity", "git", "shipping"]
categories = ["command-line-utilities"]
repository = "https://github.com/Aryagorjipour/shipflow"
homepage = "https://github.com/Aryagorjipour/shipflow"
documentation = "https://docs.rs/shipflow"
authors = ["Arya Gorjipour"]

[lib]
name = "shipflow"
path = "src/lib.rs"

[[bin]]
name = "shipflow"
path = "src/main.rs"

[features]
default = ["tui"]
tui = ["dep:ratatui", "dep:crossterm"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
comfy-table = "7"
crossterm = { version = "0.28", optional = true }
directories = "6"
owo-colors = "4"
ratatui = { version = "0.30", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ulid = { version = "1", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
tempfile = "3"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
